Ez-918 layout builder page issues on theming like spacing, buttuns etc

--- a/pattern-lab/source/_patterns/_patterns-global/scss/abstracts/_variables.scss
+++ b/pattern-lab/source/_patterns/_patterns-global/scss/abstracts/_variables.scss
@@ -34,6 +34,8 @@ $color-dark-gray: #222;
 $color-navy-blue: #0069d9;
 $color-eclipse: #3a3a3a;
 $color-nobel-gray: #9E9E9E;
+$color-green-lt: #729478;
+$color-green-lt-hover: #416448;
 
 // FONT SIZE
 $default-font-size: 16px;
